# mohio

./: .firebaserc  .gitignore  LICENSE  README.md  ROADMAP.md  TEST_IMPLEMENTATION_SUMMARY.md  USER_EXPERIENCE.md  VISUAL_DESIGN_SPEC.md  angular.json  ci.sh  eslint.config.mjs  firebase.json  investor.md  karma.conf.js  notes.md  package-lock.json  package.json  tsconfig.json  ux.md  vitest.config.ts
.codex/: profiling-document-switch.md
.obsidian/: community-plugins.json  workspace.json
app/: globals.css  layout.tsx  page.tsx
backups/: db-backup-2025-07-18T07-36-04-769Z.json
components/: BlockEditor.tsx  BlockShareProvider.tsx  DocumentEditor.tsx  StoreTestPage.tsx  Toolbar.tsx  editorConfig.ts
data/: md096usm8gerlcdq073.json
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  DESIGN.md  FEATURES.md  ROADMAP.md  architecture.md  design.md  index.md  roadmap.md
example_product_backlog_django_project/: manage.py
lib/: types.ts
prisma/: schema.prisma
public/: index.html
scripts/: db-backup.ts  db-restore.ts  db-wipe.ts  seed-database.ts
src/: App.EndToEnd.test.js  App.bdd.js  App.css  App.e2e.test.js  App.js  App.test.js  MohioAppBar.js  MohioNavigationTree.css  MohioNavigationTree.js  MohioTree.js  MohioTreeElement.js  MohioTreeElement.test.js  MohioTreeElementFlat.js  MohioView.css  (+16 more)
v10-tauri/src-tauri/: Cargo.toml  tauri.conf.json
v10-tauri/src-tauri/capabilities/: default.json
v10-tauri/src-tauri/src/: main.rs
(+332 files in other folders)
