[package]
name = "mohio_v10_tauri"
version = "0.1.0"
description = "Mohio desktop prototype built with Tauri v2"
edition = "2021"

[lib]
name = "mohio_v10_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
